--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "migrate": "cd ./node_modules/@gnosis.pm/hg-contracts && ./node_modules/.bin/truffle migrate --network mainnet",
-    "start": "./node_modules/.bin/run-with-testrpc -d -l 20000000 --noVMErrorsOnRPCResponse true 'npm run migrate && node src/index.js'"
+    "start": "./node_modules/.bin/run-with-testrpc -d -l 20000000 --noVMErrorsOnRPCResponse true 'npm run migrate >> /dev/null && node src/index.js'"
   },
   "keywords": [],
   "author": "Gnosis",
